css/styles.css
/* color picker blue #11aadc */
/* color picker oof-whites #ffffff #e9e9df #ebece7 #ebebe3 #ece-eeb*/
/* baseline styles */
* {
    box-sizing: border-box;
}
body {
    background-color: #ffffff;
}
hr {
    border-top: 1px solid #bfd7ff;
    width: 90%;
}
.center-text {
    text-align: center;
}
h1,
h2 {
    font-family: 'Playfair Display', serif;
}
h4,
h5,
p {
    font-family: 'Montserrat', sans-serif;
}
/* secondary color override */
.bs-secondary {
    background-color: #11aadc !important;
}
/* navbar */
#logo {
    max-width: 20vw;
}
.bg-nav {
    background-color: #CBCBCB !important;
}
/* ee section */
.contact-heading {
    text-align: center;
}
.employee-card {
    margin-left: auto;
    margin-right: auto;
    width: 75%;
}
.employee-card > h5 {
    padding-top: 5px;
    text-align: center;
}
.employee-image {
    text-align: center;
    display: block;
    max-width: 200px;
    height: auto;
    margin-left: auto;
    margin-right: auto;
}
.bio {
    max-width: 85%;
    height: 45%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 5px;
    padding-left: 5px;
    padding-right: 5px;
    text-align: center;
    z-index: 1;
    padding-bottom: 35px;
}
.bio p {
    text-align: center;
    /* max-width: 350px; */
    max-height: 400px;
    overflow: hidden;
}
/* ART section/jumbo */
iframe {
    display: block;
    margin-left: auto;
    margin-right: auto;

}
.jumbo {
    width: 100vw;
    height: 40vh;
}
#video {
    display: inline-block;
    height: 100%;
    width: 47%;
}
#art-graphic {
    height: 100%;
    width: 48%;
    display: inline-block;
}
#art-graphic>img {
    display: block;
    max-width: 100%;
}
.heading-divider {
    width: 20%;
    margin-top: 5px;
    margin-bottom: 5px;
    padding-top: 0px;
    padding-bottom: 0px;
} 
.centered-buttons {
    display: block;
}
/* locations section */
#locations>img {
    width: 100vw;
    height: auto;
}
/* images */
.two-wide-img {
    display: inline-block;
    width: 48vw;
    padding: 5px;
}
.two-wide-img>img {
    width: 95%;
}

